src/test/resources/Parser/SyntaxErrors/FieldIdentifierCollision.front
class A {
    A a;
}
class B : A {
    A a;
}